# micro-service

./: README.md  micro
docker/: compile_proto.Dockerfile  docker-compose.yaml
protos/auth/: user.proto
services/auth/: Dockerfile  pyproject.toml  user_pb2.py  user_pb2.pyi  user_pb2_grpc.py
services/auth/src/: main.py
services/product/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
services/product/src/: main.py
