[tool.poetry]
name = "product"
version = "0.1.0"
description = ""
package-mode = false
authors = ["nobinkhan <nazrulkhan.dk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
grpcio = "^1.62.1"
grpcio-tools = "^1.62.1"
python-dotenv = "^1.0.1"
fastapi = "^0.110.0"
granian = "^1.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
